# Dais-Skills

./: README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yaml  schedule-update-actions.yaml
src/dais_skills/: __init__.py  exception.py  github_api.py  models.py  scanner.py  skill_discovery.py  source_parser.py
src/dais_skills/downloader/: __init__.py  exceptions.py  github.py
src/dais_skills/extractor/: __init__.py  exceptions.py  resource.py
src/dais_skills/public/: __init__.py  exceptions.py  github.py
src/dais_skills/scanner/: __init__.py  exceptions.py  github.py
src/dais_skills/scanner/github_adapter/: __init__.py  api.py  source.py
tests/: test_basic.py  test_downloader.py  test_extractor.py  test_public_github.py  test_scanner.py  test_smoke.py
