[project]
name = "dais-skills"
version = "0.1.0"
description = "A Python package for scanning and downloading agent skills from specified GitHub repositories."
readme = "README.md"
authors = [{ name = "BHznJNs", email = "bhznjns@outlook.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.11.0"]
build-backend = "uv_build"
